--- a/src/assets/styles/cmps/LabelsSlider.scss
+++ b/src/assets/styles/cmps/LabelsSlider.scss
@@ -1,6 +1,6 @@
 .labels-slider-container {
   position: sticky;
-  top: 12rem;
+  top: 0;
   z-index: 3;
   grid-column: 1/-1;
   width: 100%;
@@ -16,7 +16,7 @@
   overflow-x: auto;     // ✅ enables horizontal scroll
   overflow-y: hidden;
 
-  
+
   &.hidden {
     opacity: 0;
     pointer-events: none;
